fixed path to img

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div class='title'>
-  <h1 class="title">Kathy Tian</h1>  
+  <h1 class="title">Kat Tian</h1>  
   <h2 class="title"> Professional Curriculum Vitae </h2> 
 </div> 
   <div class='container'><div class='sidesection'>
@@ -59,7 +59,7 @@
 
       <h4> Programming</h4>
 
-    <img class='toolimage' src='file:///C:/Users/Kathy/Downloads/baseline-code-24px%20(1).svg'/>
+    <img class='toolimage' src='./code.svg'/>
     <ul>
     <li>Python</li>
     <li>R</li> 
@@ -72,7 +72,7 @@
 </div>
   <div class=''>
     <h4>Tools</h4>
-    <img class='toolimage' src='file:///C:/Users/Kathy/Downloads/baseline-build-24px.svg'>
+    <img class='toolimage' src='./baseline-build-24px.svg'>
     <ul>
         <li>Tableau</li>
         <li>OpenRefine</li> 
@@ -84,7 +84,7 @@
 
   <div class=''>
       <h4>Research</h4>
-      <img class='toolimage' src='file:///C:/Users/Kathy/Downloads/baseline-insert_chart_outlined-24px.svg'>
+      <img class='toolimage' src='./baseline-insert_chart_outlined-24px.svg'>
       <ul>
           <li>Quantitative Research</li>
           <li>Qualitative Research </li> 
@@ -101,7 +101,7 @@
   <h3 class="orange">Professional Certifications</h3>
   <div class='certifications'>
 
-  <img class='certimage' src='file:///C:/Users/Kathy/Downloads/baseline-school-24px%20(1).svg'>
+  <img class='certimage' src='./baseline-school-24px.svg'>
   <ul>
       <li><a href=https://courses.cognitiveclass.ai/certificates/65abf9e8e6894c2db508be0d11fc1d0f>Machine Learning - Dimensionality Reduction</a></li>
       <li><a href=https://courses.cognitiveclass.ai/certificates/4c5082cb517543eb8b508be76380d81b>Machine Learning with Python</a></li> 
