--- a/index.html
+++ b/index.html
@@ -27,15 +27,7 @@
   <div class='mainsection'> 
     <div class='aboutme'><h3 class="orange"> About Me</h3>
     
-    <p class='blurb'>Kat Tian is currently in the final year of her doctoral studies in Marketing and Data Science at The University of Illinois at Urbana-Champaign, where she 
-      is recipent of the highly competitive 'Distinguished Student' fellowship. 
-      She received her Master's degree from the London School of Economics in London, United Kingdom and her Bachelor's from the Bejing Foreign Studies 
-      University in Beijing, China. Kat holds professional experience as a researcher at the Social Research and Technology Innovation Labratory (STRI), 
-      a lab that employing full-time  data scientists to consult with campus researchers across the social sciences (e.g. advertising, business, 
-      psychology, sociology) and the computational sciences (e.g. computer science, statistics, information sciences) Additionally, Kat has experience
-      working as a researcher for the United Kingdom Government's Trade and Investment division, a marketing assistant at PopSugar, and as a media researcher at The Wall Street Journal.
-      Kat is passionate about research, data, and technology. Currently, her research foucses on how cultural variables influence consumers' intentions in e-commerce 
-      environments. 
+    <p class='blurb'>Kat Tian is currently in the final year of her doctoral studies in Marketing and Data Science at The University of Illinois at Urbana-Champaign, where she is recipient of the highly competitive 'Distinguished Student' fellowship. She received her Master's degree from the London School of Economics in London, United Kingdom and her Bachelor's from the Beijing Foreign Studies University in Beijing, China. Kat holds professional experience as a researcher at the Social Research and Technology Innovation Laboratory (STRI), a lab that employing full-time data scientists to consult with campus researchers across the social sciences (e.g. advertising, business, psychology, sociology) and the computational sciences (e.g. computer science, statistics, information sciences) Additionally, Kat has experience working as a researcher for the United Kingdom Government's Trade and Investment division, a marketing assistant at PopSugar, and as a media researcher at The Wall Street Journal. Kat is passionate about research, data, and technology. Currently, her research focuses on how cultural variables influence consumers' intentions in e-commerce environments.
     </p>
   </div>
    
